--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-flex"]
 	path = themes/hugo-flex
 	url = https://github.com/de-souza/hugo-flex.git
+[submodule "themes/hugo-nailed-jelly"]
+	path = themes/hugo-nailed-jelly
+	url = git@gitea.home.private:Home/hugo-nailed-jelly.git
